# sign-language

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data_collect/: record_landmarks.py
dataset_builder/: augment_landmarks.py  frankenstein_builder.py  merge_custom_letters.py
frontend/: app.css  app.js  index.html
models/: README.md
scripts/: setup.ps1  setup.sh
src/: __init__.py
src/backend/: __init__.py
src/backend/api/: __init__.py  routes.py  schemas.py
src/backend/core/: __init__.py  config.py  letter_sequence.py  session_manager.py  tutorial_manager.py
src/backend/detection/: __init__.py  dynamic_detector.py  hand_capture.py  sign_detector.py  static_detector.py
src/backend/models/: __init__.py  cnn_model.py  config.py  lstm_model.py
tests/: test_models.py
training/dynamic/: config.py  model.py  train.py  webcam_test.py
training/static/: config.py  data_augmentation.py  data_gathering.py  dataset_creation.py  train.py
