[project]
name = "sign-language"
version = "0.1.0"
description = "Real-time NGT (Dutch Sign Language) fingerspelling learning app powered by computer vision and deep learning."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Filipp Lotsmanov"},
    {name = "DanilSysenko"},
    {name = "Oleksii Krasnoshtanov"},
]
dependencies = [
    "fastapi",
    "fastdtw",
    "matplotlib",
    "mediapipe==0.10.14",
    "numpy",
    "opencv-python",
    "pandas",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[project.scripts]
sign-language = "main:main"